SONAR-12077 Do not record file move events in issue changelog